# godot_bevy_test

./: Cargo.toml  Makefile  Makefile.toml  README.md  shell.nix
godot/: project.godot
godot/assets/: bevy.png.import  godot-ferris-1024x1024.png.import  godot-ferris-120x120.png.import  godot-ferris-128x128.png.import  godot-ferris-16x16.png.import  godot-ferris-32x32.png.import  godot-ferris-64x64.png.import  godot-ferris-76x76.png.import
godot/assets/audio/: flying.ogg.import
godot/assets/fonts/: Roboto-regular.tres
godot/native/: EcsController.gdns  TitleMenu.gdns  game.gdnlib
godot/scenes/: Countdown.gd  Crab.tscn  Game.tscn  GameOver.tscn  Player.gd  Player.tscn  StartGameBtn.gd  TitleMenu.gd  TitleMenu.tscn  crab.gd  test2D.gd
rust/: Cargo.toml
rust/src/: ecs_controller.rs  game.rs  lib.rs  player.rs
rust/src/ecs/: app.rs  mod.rs
rust/src/ecs/godot_bevy_sync/: components.rs  events.rs  mod.rs  resources.rs
rust/src/ecs/plugins/: countdown.rs  mod.rs  movement.rs
rust/src/ecs/plugins/engine_sync/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
rust/src/ecs/plugins/godot_bevy_sync/: components.rs  events.rs  mod.rs  stages.rs  systems.rs
